snippets/5.5/oss-product-list-include.mdx
---
---

## Tyk Open Source 

The Tyk Team has created and maintains the following components, which are fully Open Source and available under Mozilla Public License 2.0 (MPL). Star the Tyk components you use by clicking the appropriate button:

* [Tyk Gateway](/5.5/tyk-oss-gateway) - Fully fledged API Gateway (Start here!) - <a href="https://github.com/TykTechnologies/tyk" className="github-button" target="_blank" rel="noopener noreferrer">⭐ Star TykTechnologies/tyk</a>
* [Tyk Pump](/5.5/tyk-pump) - Send API analytics data to your chosen backend - <a href="https://github.com/TykTechnologies/tyk-pump" className="github-button" target="_blank" rel="noopener noreferrer">⭐ Star TykTechnologies/tyk-pump</a>
* [Tyk Operator](/5.5/{{< ref tyk-operator >}}) - Manage your API Configurations in K8S CRDs - <a href="https://github.com/TykTechnologies/tyk-operator" className="github-button" target="_blank" rel="noopener noreferrer">⭐ Star TykTechnologies/tyk-operator</a>
* [Tyk Identity Broker](/5.5/tyk-identity-broker) - Connect your third-party IdP systems - <a href="https://github.com/TykTechnologies/tyk-identity-broker" className="github-button" target="_blank" rel="noopener noreferrer">⭐ Star TykTechnologies/tyk-identity-broker</a>
* [Tyk Sync](/5.5/product-stack/tyk-sync/overview) - Version control your API configurations - <a href="https://github.com/TykTechnologies/tyk-sync" className="github-button" target="_blank" rel="noopener noreferrer">⭐ Star TykTechnologies/tyk-sync</a>
* [Tyk Helm Chart](/5.5/product-stack/tyk-charts/overview) - Deploy Tyk in K8S - <a href="https://github.com/TykTechnologies/tyk-charts" className="github-button" target="_blank" rel="noopener noreferrer">⭐ Star TykTechnologies/tyk-charts</a>

MPL is a copyleft license that is easy to comply with. You must make the source code for any of your changes available under MPL, but you can combine the MPL software with proprietary code, as long as you keep the MPL code in separate files. Version 2.0 is, by default, compatible with LGPL and GPL version 2 or greater. You can distribute binaries under a proprietary license, as long as you make the source available under MPL. This is just a brief overview of MPL, you should refer to the MPL license in full and if you are in any doubt about how this license impacts you, please contact us to discuss.

You can find additional FAQs regarding the MPL license [here](https://www.mozilla.org/en-US/MPL/2.0/FAQ/).