snippets/5.8/oss-product-list-include.mdx
---
---

The Tyk Team has created and maintains the following components, which are fully Open Source and available under Mozilla Public License 2.0 (MPL). Star the Tyk components you use by clicking the appropriate button:

export const linkStyle = {
    fontWeight: 'normal',
    textDecoration: 'none',
    borderBottom: 'none',
    color: 'rgb(var(--primary))',
    transition: 'border-bottom 0.2s ease'
};

export const handleMouseEnter = (e) => {
    e.target.style.borderBottom = '1px solid rgb(var(--primary))';
};

export const handleMouseLeave = (e) => {
    e.target.style.borderBottom = 'none';
};

<Columns cols={2}>
  <Card title="Tyk Gateway" href="https://github.com/TykTechnologies/tyk" cta="⭐️ Github" arrow={true}>
    Fully fledged API Gateway.

    <a href="/5.8/tyk-oss-gateway" style={linkStyle} onMouseEnter={handleMouseEnter} onMouseLeave={handleMouseLeave}>Learn more</a>
  </Card>
  <Card title="Tyk Pump" href="https://github.com/TykTechnologies/tyk-pump" cta="⭐️ Github" arrow={true}>
    Send API analytics data to your chosen backend.

    <a href="/5.8/api-management/tyk-pump" style={linkStyle} onMouseEnter={handleMouseEnter} onMouseLeave={handleMouseLeave}>Learn more</a>
  </Card>
  <Card title="Tyk Identity Broker" href="https://github.com/TykTechnologies/tyk-identity-broker" cta="⭐️ Github" arrow={true}>
    Connect your third-party IdP systems.

    <a href="/5.8/api-management/external-service-integration#what-is-tyk-identity-broker-tib" style={linkStyle} onMouseEnter={handleMouseEnter} onMouseLeave={handleMouseLeave}>Learn more</a>
  </Card>
  <Card title="Tyk Helm Chart" href="https://github.com/TykTechnologies/tyk-charts" cta="⭐️ Github" arrow={true}>
    Deploy Tyk in K8S.

    <a href="/5.8/product-stack/tyk-charts/overview" style={linkStyle} onMouseEnter={handleMouseEnter} onMouseLeave={handleMouseLeave}>Learn more</a>
  </Card>
</Columns>

MPL is a copyleft license that is easy to comply with. You must make the source code for any of your changes available under MPL, but you can combine the MPL software with proprietary code, as long as you keep the MPL code in separate files. Version 2.0 is, by default, compatible with LGPL and GPL version 2 or greater. You can distribute binaries under a proprietary license, as long as you make the source available under MPL. This is just a brief overview of MPL, you should refer to the MPL license in full and if you are in any doubt about how this license impacts you, please contact us to discuss.

You can find additional FAQs regarding the MPL license [here](https://www.mozilla.org/en-US/MPL/2.0/FAQ/).
